[project]
name = "study"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "aiomisc>=17.8.1",
    "aiosmtplib>=4.0.2",
    "bs4>=0.0.2",
    "fastapi[all]>=0.116.1",
    "fastembed>=0.7.3",
    "fastmcp>=2.11.3",
    "geopy>=2.4.1",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-openai>=0.3.32",
    "mcp-use>=1.3.10",
    "readability>=0.3.2",
    "readability-lxml>=0.8.4.1",
    "tortoise-orm>=0.25.1",
    "truststore>=0.10.4",
]
