[project]
name = "study"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=0.3.4",
    "aiohttp>=3.12.15",
    "aiomisc>=17.8.1",
    "aiosmtplib>=4.0.2",
    "bs4>=0.0.2",
    "fastapi[all]>=0.116.1",
    "fastembed>=0.7.3",
    "fastmcp>=2.11.3",
    "geopy>=2.4.1",
    "langchain==1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.1",
    "langchain-experimental>=0.4.1",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-mongodb>=0.7.1",
    "langchain-neo4j>=0.8.0",
    "langchain-openai==1.0.0",
    "langchain-text-splitters>=1.0.0",
    "mcp-use>=1.3.10",
    "multipledispatch>=1.0.0",
    "neo4j>=6.1.0",
    "pymupdf>=1.26.7",
    "python-json-logger>=4.0.0",
    "readability>=0.3.2",
    "readability-lxml>=0.8.4.1",
    "tortoise-orm>=0.25.1",
    "truststore>=0.10.4",
    "uvicorn>=0.35.0",
]
